[project]
name = "dayssincecalc"
version = "0.1.0"
description = "Calculates days since specified date: can be used as a cli app, or to serve a json response"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.10.0",
    "ruff>=0.7.3",
    "uvicorn>=0.32.1",
]
